--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -5,30 +5,23 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
-<?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.ToggleGroup?>
+<?import javafx.scene.effect.Reflection?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane minHeight="207.0" minWidth="689.0" prefHeight="358.0" prefWidth="707.0" style="-fx-background-color: pink;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+
+<AnchorPane prefWidth="727.0" style="-fx-background-color: pink;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
    <children>
-      <SplitPane dividerPositions="0.44574780058651026" layoutX="10.0" layoutY="10.0" orientation="VERTICAL" prefHeight="480.0" prefWidth="831.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="5.0">
-        <items>
-          <AnchorPane prefHeight="143.0" prefWidth="672.0">
-               <children>
-                  <Label layoutX="61.0" layoutY="66.0" text="Name:" />
-                  <Button layoutX="541.0" layoutY="93.0" mnemonicParsing="false" onAction="#removePerson" prefHeight="9.0" prefWidth="104.0" text="Remove Person" />
-                  <Button layoutX="541.0" layoutY="121.0" mnemonicParsing="false" onAction="#showButton" prefHeight="22.0" prefWidth="104.0" text="Show Person" />
-                  <Button graphicTextGap="5.0" layoutX="541.0" layoutY="63.0" mnemonicParsing="false" onAction="#addPerson" prefHeight="22.0" prefWidth="104.0" text="Add Person" />
-                  <Label layoutX="298.0" layoutY="66.0" prefHeight="17.0" prefWidth="65.0" text="Personal ID:" />
-                  <TextField fx:id="name_textField" layoutX="104.0" layoutY="64.0" promptText="John Doe" />
-                  <TextField fx:id="pNbr_textField" layoutX="369.0" layoutY="64.0" promptText="yymmdd" />
-                  <Button fx:id="close_menu" layoutX="635.0" layoutY="8.0" mnemonicParsing="false" onAction="#handleCloseButtonAction" prefHeight="25.0" prefWidth="53.0" style="-fx-border-radius: 1; -fx-background-color: pink;" text="Exit" AnchorPane.rightAnchor="8.0" AnchorPane.topAnchor="8.0" />
-               </children>
-            </AnchorPane>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="343.0" prefWidth="1001.0" styleClass="\@DarkTheme">
+      <AnchorPane minHeight="207.0" minWidth="689.0" prefHeight="358.0" prefWidth="707.0" style="-fx-background-color: white; -fx-background-radius: 10;" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
+         <padding>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+         </padding>
+         <children>
+            <AnchorPane layoutX="10.0" layoutY="187.0" minHeight="0.0" minWidth="0.0" prefHeight="171.0" prefWidth="697.0" styleClass="\@DarkTheme" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="182.0">
                <children>
                   <RadioButton fx:id="creditRadioBtn" layoutX="111.0" layoutY="134.0" mnemonicParsing="false" selected="true" text="Credit">
                      <toggleGroup>
@@ -55,10 +48,23 @@
                   </TextArea>
                </children>
             </AnchorPane>
-        </items>
-      </SplitPane>
+            <Separator layoutX="154.0" layoutY="170.0" prefHeight="3.0" prefWidth="707.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="177.5" />
+            <AnchorPane layoutX="10.0" layoutY="10.0" prefHeight="180.0" prefWidth="697.0" AnchorPane.bottomAnchor="173.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0">
+               <children>
+                  <Label layoutX="61.0" layoutY="66.0" text="Name:" />
+                  <Button layoutX="541.0" layoutY="96.0" mnemonicParsing="false" onAction="#removePerson" prefHeight="9.0" prefWidth="104.0" text="Remove Person" />
+                  <Button layoutX="541.0" layoutY="131.0" mnemonicParsing="false" onAction="#showButton" prefHeight="22.0" prefWidth="104.0" text="Show Person" />
+                  <Button layoutX="541.0" layoutY="62.0" mnemonicParsing="false" onAction="#addPerson" prefHeight="22.0" prefWidth="104.0" text="Add Person" />
+                  <Label layoutX="298.0" layoutY="66.0" prefHeight="17.0" prefWidth="65.0" text="Personal ID:" />
+                  <TextField fx:id="name_textField" layoutX="104.0" layoutY="64.0" promptText="John Doe" />
+                  <TextField fx:id="pNbr_textField" layoutX="369.0" layoutY="64.0" promptText="yymmdd" />
+                  <Button fx:id="close_menu" layoutX="634.0" layoutY="2.0" mnemonicParsing="false" onAction="#handleCloseButtonAction" prefHeight="25.0" prefWidth="53.0" style="-fx-border-radius: 1; -fx-background-color: pink;" text="Exit" />
+               </children>
+            </AnchorPane>
+         </children>
+      </AnchorPane>
    </children>
-   <padding>
-      <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-   </padding>
+   <effect>
+      <Reflection fraction="0.21" topOpacity="0.13" />
+   </effect>
 </AnchorPane>
